Project

General

Profile

Actions

Bug #50951

closed

[pwl ssd] segfault in AbstractWriteLog::get_context() during fio workload

Added by Ilya Dryomov almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://qa-proxy.ceph.com/teuthology/dis-2021-05-23_20:57:33-rbd-wip-rbd-pwl-ssd-tailp-distro-basic-smithi/6130634/teuthology.log

(gdb) bt
#0  0x00007f77f216fbdb in librbd::cache::pwl::AbstractWriteLog<librbd::ImageCtx>::get_context (this=0x7f774c0008d0) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/librbd/cache/pwl/AbstractWriteLog.cc:1095
#1  0x00007f77f21af42c in librbd::cache::pwl::C_BlockIORequest<librbd::cache::pwl::AbstractWriteLog<librbd::ImageCtx> >::release_cell (this=0x7f77b105e480) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/librbd/cache/pwl/Request.cc:64
#2  0x00007f78188dcfed in Context::complete (this=0x7f77b01cb160, r=<optimized out>) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/include/Context.h:99
#3  0x00007f77f21a9a4b in librbd::cache::pwl::SyncPointLogOperation::appending (this=<optimized out>) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/librbd/cache/pwl/LogOperation.cc:91
#4  0x00007f77f21c917c in librbd::cache::pwl::ssd::WriteLog<librbd::ImageCtx>::schedule_append_ops (this=<optimized out>, ops=...) at /usr/include/c++/8/bits/shared_ptr_base.h:1018
#5  0x00007f77f2172621 in librbd::cache::pwl::AbstractWriteLog<librbd::ImageCtx>::schedule_append (this=0x7f77b00159d0, op=...) at /usr/include/c++/8/bits/shared_ptr_base.h:1167
#6  0x00007f77f21b1a04 in librbd::cache::pwl::C_FlushRequest<librbd::cache::pwl::AbstractWriteLog<librbd::ImageCtx> >::dispatch (this=0x7f77b04808f0) at /usr/include/c++/8/ext/atomicity.h:96
#7  0x00007f77f216edc8 in Context::complete (r=<optimized out>, this=0x7f774824f330) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/include/Context.h:99
#8  ContextWQ::process (ctx=0x7f774824f330, this=0x7f77b0016008) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/common/WorkQueue.h:562
#9  ThreadPool::PointerWQ<Context>::_void_process (this=0x7f77b0016008, item=0x7f774824f330, handle=...) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/common/WorkQueue.h:347
#10 0x00007f78189650a4 in ThreadPool::worker (this=0x7f77b0015bb8, wt=<optimized out>) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/common/WorkQueue.cc:117
#11 0x00007f7818967b05 in ThreadPool::WorkThread::entry (this=<optimized out>) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/common/WorkQueue.h:401
#12 0x00007f7818945f8d in Thread::_entry_func (arg=<optimized out>) at /usr/src/debug/ceph-17.0.0-4489.ge1e6f469.el8.x86_64/src/common/Thread.cc:74
#13 0x00007f781a28b14a in ?? () from /lib64/libpthread.so.0
#14 0x0000000000000000 in ?? ()

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #51669: pacific: [pwl ssd] segfault in AbstractWriteLog::get_context() during fio workloadResolvedIlya DryomovActions
Actions #1

Updated by Ilya Dryomov almost 3 years ago

Looks like C_BlockIORequest instance was at least partially corrupted.

Actions #2

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Ilya Dryomov
Actions #3

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 42145
Actions #4

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to pacific
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51669: pacific: [pwl ssd] segfault in AbstractWriteLog::get_context() during fio workload added
Actions #6

Updated by Deepika Upadhyay over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF